...
    .sort((a, b) => new Date(b.start) - new Date(a.start)); //latest appear on top
  // userBookings = userBookings.slice(0, 10) //load only the first 10 spaces

  return (
    <Container>
      <FlatList
        testID="bookings-scroll-view"
        ListHeaderComponent={
          <Header testID="bookings-header-component">
            {/* <View style={{ flexDirection: 'row', justifyContent: 'space-between' }}>
              <Typography.H color={colors.red}>{'Bookings'}</Typography.H>
              <View style={{ flexDirection: 'row', alignItems: 'center' }}>
                <Typography.Cap color={colors.black}>{(switchOn ? 'Show Upcoming' : 'Show All') + '  '}</Typography.Cap>
                <Switch
                  testID="show-all-bookings-switch"
                  value={switchOn}
                  onValueChange={() => setSwitchOn(!switchOn)}
                  color={'purple'}
                  thumbColor={'white'}
                />
              </View>
...
