...

  return (
    <ScrollView contentContainerStyle={styles.container}>
      <View style={styles.logoContainer}>
        <Image source={require('../../assets/icon.png')} style={styles.logo} />
      </View>
      <Text testID={'welcome-text'} style={styles.title}>Welcome To {process.env.EXPO_PUBLIC_APP_NAME}</Text>
      <Text style={styles.subtitle}>Find and rent spaces on an hourly basis</Text>
      <TextInput
        style={[styles.input, !isEmailValid && styles.inputError]}
        testID="email-input"
        disabled={disabled}
        onChangeText={setEmail}
        value={email}
        clearButtonMode="always"
        textContentType="emailAddress"
        placeholder="Enter email address"
        keyboardType="email-address"
        autoCapitalize="none"
      />
      {!isEmailValid && <Text style={styles.errorText}>Please enter a valid email address.</Text>}
      <BtnContainNew
        testID={'submit-email-button'}
        label={'Continue with Email'}
        disabled={disabled}
        onPress={() => handleOnLogin(email)}
      />
      <Text style={styles.agreementText}>
        By continuing, you agree to our{' '}
...
