...
        }}
      />
      <Tab.Screen
        name="Bookings"
        component={BookingTopTab}
        options={{
          tabBarTestID: 'btm-nav-bookings',
          headerShown: false,
          tabBarIcon: ({ color, size }) => (
            <EvilIcons name="calendar" color={color} size={size} />
          ),
          tabBarLabel: 'Bookings'
        }}
...
